Dashboard TableTwo Change Req.
-- removed Delete Row functionality

--- a/dashboard.html
+++ b/dashboard.html
@@ -229,7 +229,7 @@
                                                                     	<th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtableone" rowspan="1" colspan="1" role="columnheader"></th>
                                                                         <th scope="col" class="sorting_asc" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Serial#</th>
                                                                         <th scope="col" class="sorting_asc tablet desktop" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Registration#</th>
-                                                                        <th scope="col" class="sorting tablet" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader"> Mark</th>
+                                                                        <th scope="col" class="sorting tablet desktop" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader"> Mark</th>
                                                                         <th scope="col" class="sorting fablet tablet desktop" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Owner</th>
                                                                         <th scope="col" class="sorting none" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Due Date</th>
                                                                         <th scope="col" class="sorting none" tabindex="0" aria-controls="dashboardtabletwo" rowspan="1" colspan="1" role="columnheader" aria-sort="ascending" aria-label="activate to sort column descending"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Status</th>
@@ -238,7 +238,7 @@
                                                                 </thead>
                                                                 <tbody>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697834</td>
                                                                     <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -248,7 +248,7 @@
                                                                     <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697248</td>
                                                                     <td tabindex="0">87697235</td>
                                                                     <td tabindex="0"><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -258,7 +258,7 @@
                                                                     <td tabindex="0">None</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697899</td>
                                                                     <td tabindex="0">87697823</td>
                                                                     <td tabindex="0"><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -268,7 +268,7 @@
                                                                     <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697834</td>
                                                                     <td tabindex="0"><img src="images/stylized_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -278,7 +278,7 @@
                                                                     <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697248</td>
                                                                     <td tabindex="0">87697235</td>
                                                                     <td tabindex="0"><img src="images/adf-d-8-e-123-jpg.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -288,7 +288,7 @@
                                                                     <td tabindex="0">None</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697899</td>
                                                                     <td tabindex="0">87697823</td>
                                                                     <td tabindex="0"><img src="images/designonly_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -298,7 +298,7 @@
                                                                     <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697840</td>
                                                                     <td tabindex="0">87697834</td>
                                                                     <td tabindex="0"><img src="images/designonly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -308,7 +308,7 @@
                                                                     <td tabindex="0"><a href="#">Respond to Office Action</a></td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697248</td>
                                                                     <td tabindex="0">87697235</td>
                                                                     <td tabindex="0"><img src="images/designwithtext_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
@@ -318,7 +318,7 @@
                                                                     <td tabindex="0">None</td>
                                                                   </tr>
                                                                   <tr>
-                                                                  	<td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
+                                                                  	<td tabindex="0"></td>
                                                                     <td tabindex="0">87697899</td>
                                                                     <td tabindex="0">87697823</td>
                                                                     <td tabindex="0"><img src="images/Example2_shape_words.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
