--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
     <title>USPTO.gov :: webapp prototype :: Dashboard</title>
-  	<script type="application/javascript" src="js/ie_alert.js"></script>
+  	<script type="application/javascript" src="js/chrome_alert.js"></script>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/lynnstyles.css">
 </head>
-<body>
+<body onload="ShowChromeAlert()">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -34,7 +34,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <body onload="ShowIEAlert()">
           <a class="navbar-brand" href="http://www.uspto.gov"><img src="images/logo_top.png" alt="US Trade and Patent Office logo"></a>
         </div>
     
@@ -138,9 +137,10 @@
                 <div class="col-xs-12" id="dashsectionscontainer">
                     <h1>eFile Homepage</h1>
                     	<div class="col-xs-12 form-group form-group-md alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
-                          <p id="mintext"></p>
-                          <button type="button" class="close" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
-                          <br clear="all">
+                          <div class="closepans" id="minholder">
+                          	<p id="mintext"></p>
+                          	<button type="button" class="close closegspanels" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                          </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-12 form-group form-group-md" id="dashboard">
@@ -342,15 +342,15 @@
                                                     <div class="panel panel-default">
                                                         <div class="panel-heading">
                                                             <div class="row">
-                                                                <div class="col-xs-10">
+                                                                <div class="col-xs-9">
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <h4 class="panel-title number"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Check back here for system messages and notifications.</h4>
                                                                         </div>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-xs-2 closepans">
-                                                                    <button type="button" class="close closegspanels btn" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>	
+                                                                <div class="col-xs-3 closepans">
+                                                                    <button type="button" class="close closegspanels btn" aria-label="close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>	
                                                                 </div>
                                                             </div>
                                                         </div>
