--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -224,10 +224,11 @@
                         </div>
                     </div>
                     <div class="row">
-                    	<div class="col-xs-12 form-group form-group-md alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
-                          <p id="mintext"></p>
-                          <button type="button" class="close" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
-                          <br clear="all">
+                    	<div class="col-xs-12">
+                            <div class="col-xs-12 form-group form-group-md alert alert-warning closepans" role="alert" aria-live="assertive" id="alertmin">
+                              <p id="mintext"></p>
+                              <button type="button" class="close closegspanels" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                            </div>
                         </div>
                         <div class="col-xs-12" id="basisabde">
                                 <div class="leadtext">
