--- a/ROA_declaration_signature.html
+++ b/ROA_declaration_signature.html
@@ -132,7 +132,7 @@
     </nav>
     <div class="container-fluid">    
         <div class="row content">
-            <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
+            <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="roasign">
               <!--START Content Div-->
                 <div class="row">
                     <div class="col-xs-12">
@@ -142,6 +142,13 @@
                             </div>
                         </div>
                         <div class="row">
+                        	<div class="col-xs-12">
+                            <div class="col-xs-12 alert alert-warning closepans" role="alert" aria-live="assertive" id="alertmin">
+                                  <p id="mintext"></p>
+                                  <button type="button" class="close closegspanels" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                                  <br clear="all">
+                                </div>
+                            </div>
                             <div class="col-xs-12" id="declarationsignature">
                                 <form action="" method="post">
                                    <fieldset>
