--- a/filing_basis_ab.html
+++ b/filing_basis_ab.html
@@ -225,6 +225,13 @@
                         </div>
                     </div>
                     <div class="row">
+                    	<div class="col-xs-12">
+                            <div class="col-xs-12 alert alert-warning closepans" role="alert" aria-live="assertive" id="alertmin">
+                              <p id="mintext"></p>
+                              <button type="button" class="close closegspanels" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                              <br clear="all">
+                            </div>
+                        </div>
                         <div class="col-xs-12" id="basisab">
                             <div class="leadtext">
                                 <p id="lead" class="weight600">Please provide information about each class you have selected for your mark.</p>
