--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -225,7 +225,7 @@
                     </div>
                     <div class="row">
                     	<div class="col-xs-12">
-                            <div class="col-xs-12 form-group form-group-md alert alert-warning closepans" role="alert" aria-live="assertive" id="alertmin">
+                            <div class="col-xs-12 alert alert-warning closepans" role="alert" aria-live="assertive" id="alertmin">
                               <p id="mintext"></p>
                               <button type="button" class="close closegspanels" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
                             </div>
