File Upload Component Updates
- File Upload Component updates (see screen capture) completed
- Fixed Filingbasisab Select File line-height issue for first file upload input on the page
- Fixed Filing BasisAB when user uploads individual files, then selects upload only one file
- Fixed CSS for Additional Information page Submit Button margin-top
- Fixed Blue File Upload Display Area to show only after a file is selected, and also to hide after file is deleted
- Fixed ‘Bold’ on Additional Info <p>s for consistency with other panels
- Scripted Unique IDS, Labels, Aria-labelledBy attributes for Uploaded Files
- Fixed Add Additional Foreign Registration Button
- Fixed ROA File Upload (img) CSS float property
- Fixed `<title>` tag brand order for proper browser tab display in above listed files
- When user toggles between radio button to reveal / hide panels that have a File Upload component, all previous selections on the hidden panel are cleared, including file uploads

--- a/ROA_S3.html
+++ b/ROA_S3.html
@@ -295,7 +295,7 @@
                                                 <form action="" method="post">
                                                     <fieldset aria-label="present argument information">
                                                         <div class="row">
-                                                            <div class="col-xs-12 form-group form-group-md">
+                                                            <div class="col-xs-12 form-group form-group-md upload">
                                                                 <label for="noregister">Provide the additional information.</label> 
                                                                 <textarea id="noregister" rows="6" wrap="hard" class="form-control"></textarea>
                                                                 <p class="form-group form-group-md">Optional upload.</p>
@@ -305,8 +305,7 @@
                                                                 </div><!-- Drop Zone -->
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
-                                                                        <p id="uploadedfile">Selected files</p>
-                                                                        <div class="list-group" id="filedata">
+                                                                        <div class="list-group">
                                                                             <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                         </div>
                                                                     </div>
