--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Attorney Information</title>
+    <title>Attorney Information :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -754,7 +754,7 @@
                                             <input type="date" class="form-control" id="bar-membership-date" name="attorneyBarAdmissionDate" value="">
                                         </div>
                                     </div>
-                                    <div class="form-group form-group-md">
+                                    <div class="form-group form-group-md upload">
                                         <div class="form-group form-group-md hidethis">
                                             <label class="small long upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>
     Upload bar credentials, including certificate of good standing from highest court of a state, commonwealth, territory or possession, or of the District of Columbia evidencing that you are a memeber of the bar of such court and are in good standing.</label>
@@ -762,9 +762,15 @@
                                         </div>
                                         <div class="row">
                                             <div class="js-upload-finished col-xs-12">
-                                                <p id="uploadedfile">Selected files</p>
-                                                <div class="list-group" id="filedata">
+                                                <div class="list-group">
                                                     <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <div class="col-xs-12 form-group form-group-md">
+                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                 </div>
                                             </div>
                                         </div>
