--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Filing Basis :: 1(a) 1(b) 44(d) 44(e)</title>
+    <title>Filing Basis :: 1(a) 1(b) 44(d) 44(e) :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -250,7 +250,7 @@
                                                             <label for="inlineRadio058" class="radio-inline radiocontainer block"><input type="radio" class="yesoneeach" name="numberspecimen" id="inlineRadio058" value="no" tabindex="0"><span class="checkmark"></span>One specimen for each good/service within this class.</label>
                                                         </div><!--END radiogroup-->
                                                         <div class="row form-group form-group-md yesonespecimen"><!--toggle 'yes' radio-->
-                                                            <div class="col-xs-12 form-group form-group-md">
+                                                            <div class="col-xs-12 form-group form-group-md upload">
                                                                 <p id="upimage">Provide an image of your specimen:</p>
                                                                 <div>
                                                                     <div class="form-group form-group-md hidethis">
@@ -259,8 +259,7 @@
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
-                                                                            <p id="uploadedfile">Selected files</p>
-                                                                            <div class="list-group" id="filedata">
+                                                                            <div class="list-group">
                                                                                 <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                             </div>
                                                                         </div>
@@ -308,7 +307,7 @@
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_1"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
-                                                                <div class="col-xs-12">
+                                                                <div class="col-xs-12 upload">
                                                                     <p id="upimagetwo">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
                                                                         <label class="small upload-drop-zone" for="specimenthreefile" id="upimgtwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
@@ -316,8 +315,7 @@
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
-                                                                            <p id="uploadedfile">Selected files</p>
-                                                                            <div class="list-group" id="filedata">
+                                                                            <div class="list-group">
                                                                                 <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                             </div>
                                                                         </div>
@@ -423,7 +421,7 @@
                                                                         <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                                         <input type="date" class="form-control" id="renew-date" name="renewdate" value="">
                                                                     </div>
-                                                                    <div class="form-group form-group-md col-xs-12">
+                                                                    <div class="form-group form-group-md col-xs-12 upload">
                                                                         <p id="upimagethree">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                                         <div class="form-group form-group-md hidethis">
                                                                             <label class="small upload-drop-zone" for="1" id="upimgthree"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
@@ -431,8 +429,7 @@
                                                                         </div>
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
-                                                                                <p id="uploadedfile">Selected files</p>
-                                                                                <div class="list-group" id="filedata">
+                                                                                <div class="list-group">
                                                                                     <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                                 </div>
                                                                             </div>
@@ -452,7 +449,7 @@
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
                                                                                 <div class="btn-group col-xs-6">
-                                                                                    <button type="submit" class="btn btn-sm btn-success addinitial" id="addforeignreg_basisone">Add Additional Foreign Registration</button>
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addforeignreg_basisone">Add Additional Foreign Registration</button>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -488,16 +485,15 @@
                                                                 <label class="form-check-label form-check" for="" id="individualspecimen_2"><span class="radio notspecial">Check here to provide a specimen for this individual good/service.</span></label>
                                                             </div>
                                                             <div class="form-group form-group-md yesspecimen"><!--toggle 'yes' radio-->
-                                                                <div class="col-xs-12">
+                                                                <div class="col-xs-12 upload">
                                                                     <p id="upimagefour">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenthreefile" id="upimgfour"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgfour upimagefour">
+                                                                        <label class="small upload-drop-zone" for="specimenfivefile" id="upimgfour"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
+                                                                        <input type="file" id="specimenfivefile" name="specimenfivefileupload" class="form-control" aria-labelledby="upimgfour upimagefour">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
-                                                                            <p id="uploadedfile">Selected files</p>
-                                                                            <div class="list-group" id="filedata">
+                                                                            <div class="list-group">
                                                                                 <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                             </div>
                                                                         </div>
@@ -602,7 +598,7 @@
                                                                         <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                                         <input type="date" class="form-control" id="renew-date" name="renewdate" value="">
                                                                     </div>
-                                                                    <div class="form-group form-group-md col-xs-12">
+                                                                    <div class="form-group form-group-md col-xs-12 upload">
                                                                         <p id="upimagefive">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                                         <div class="form-group form-group-md hidethis">
                                                                             <label class="small upload-drop-zone" for="1" id="upimgfive"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
@@ -610,8 +606,7 @@
                                                                         </div>
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
-                                                                                <p id="uploadedfile">Selected files</p>
-                                                                                <div class="list-group" id="filedata">
+                                                                                <div class="list-group">
                                                                                     <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                                 </div>
                                                                             </div>
@@ -631,7 +626,7 @@
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
                                                                                 <div class="btn-group col-xs-6">
-                                                                                    <button type="submit" class="btn btn-sm btn-success addinitial" id="addforeignreg_basistwo">Add Additional Foreign Registration</button>
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addforeignreg_basistwo">Add Additional Foreign Registration</button>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
