--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -215,7 +215,7 @@
                                       <p id="typemark">Upload a file containing your mark. <span class="weight600">&#42;</span></p>						
                                         <!--Start Dropzone-->
                                       <div class="row">
-                                          <div class="col-xs-12">
+                                          <div class="col-xs-12 upload">
                                             <form action="upload" enctype="multipart/form-data" method="post" aria-labelledby="markinfo">
                                                 <fieldset>
                                                     <legend class="sr-only"><span>File upload</span></legend>
@@ -226,7 +226,7 @@
                                                     <div class="row">
                                                         <div class="js-upload-finished col-xs-12">
                                                             <!--<p id="uploadedfile">Selected files</p>-->
-                                                            <div class="list-group" id="filedata">
+                                                            <div class="list-group">
                                                                 <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                             </div>
                                                             <div class="row">
