--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Trademark Design with Text</title>
+    <title>Trademark Design with Text :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -523,7 +523,7 @@
                                                             </div><!--END radiogroup-->
                                                             <div id="yesliving" role="region" aria-labelledby="individualiving" class="form-group form-group-md">
                                                             	<div class="row">
-                                                                	<div class="col-xs-12">
+                                                                	<div class="col-xs-12 upload">
                                                                         <h4 class="weight600">Provide the consent here. You can use your own consent template or use USPTO consent template provided below.</h4>
                                                                         <p><a href="#"><span class="glyphicon glyphicon-download" role="img" aria-label="download consent template"></span> Consent Template</a></p>
                                                                         <div class="form-group form-group-md hidethis">
@@ -532,8 +532,7 @@
                                                                         </div><!-- Drop Zone -->
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
-                                                                                <p id="uploadedfile">Selected files</p>
-                                                                                <div class="list-group" id="filedata">
+                                                                                <div class="list-group">
                                                                                 	<div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                                 </div>
                                                                             </div>
