--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Trademark Standard Character</title>
+    <title>Trademark Standard Character :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -428,7 +428,7 @@
                                                                 <label for="inlineRadio17" class="radio-inline radiocontainer">Yes<input type="radio" name="livindividualradio" id="inlineRadio17" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                                 <label for="inlineRadio18" class="radio-inline radiocontainer">No<input type="radio" name="livindividualradio" id="inlineRadio18" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                             </div><!--END radiogroup-->
-                                                            <div class="col-xs-12" id="yesliving">
+                                                            <div class="col-xs-12 upload" id="yesliving">
                                                                 <h4 class="weight600">Provide the consent here. You can use your own consent template or use USPTO consent template provided below.</h4>
                                                                 <p><a href="#"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> Consent Template</a></p>
                                                                 <div class="form-group form-group-md hidethis">
@@ -438,8 +438,7 @@
                                                                 </div><!-- Drop Zone -->
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
-                                                                        <p id="uploadedfile">Selected files</p>
-                                                                        <div class="list-group" id="filedata">
+                                                                        <div class="list-group">
                                                                             <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                         </div>
                                                                     </div>
