--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Trademark Stylized</title>
+    <title>Trademark Stylized :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -224,15 +224,14 @@
                             	<div class="col-xs-12" >
                                   <p id="typemark">Upload a file containing your mark. <span class="weight600">&#42;</span></p>						
                                     <!--Start Dropzone-->
-                                  <div class="col-xs-12 form-group form-group-md">
+                                  <div class="col-xs-12 form-group form-group-md upload">
                                         <div class="form-group form-group-md hidethis">
                                             <label class="small upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a File</label>
                                             <input type="file" id="file" name="file" class="form-control">
                                         </div><!-- Drop Zone -->
                                         <div class="row">
                                             <div class="js-upload-finished col-xs-12">
-                                                <p id="uploadedfile">Selected files</p>
-                                                <div class="list-group" id="filedata">
+                                                <div class="list-group">
                                                     <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                 </div>
                                             </div>
@@ -542,7 +541,7 @@
                                                                 <label for="inlineRadio17" class="radio-inline radiocontainer">Yes<input type="radio" name="livindividualradio" id="inlineRadio17" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                                 <label for="inlineRadio18" class="radio-inline radiocontainer">No<input type="radio" name="livindividualradio" id="inlineRadio18" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                             </div><!--END radiogroup-->
-                                                            <div class="col-xs-12" id="yesliving"> 
+                                                            <div class="col-xs-12 upload" id="yesliving"> 
                                                                 <h4 class="weight600">Provide the consent here. You can use your own consent template or use USPTO consent template provided below.</h4>
                                                                 <p><a href="#"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> Consent Template</a></p>
                                                                 <div class="form-group form-group-md hidethis">
@@ -552,8 +551,7 @@
                                                                 </div><!-- Drop Zone -->
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
-                                                                        <p id="uploadedfile">Selected files</p>
-                                                                        <div class="list-group" id="filedata">
+                                                                        <div class="list-group">
                                                                             <div class="list-group-item list-group-item-success fileholder col-xs-12" role="alert"></div>
                                                                         </div>
                                                                     </div>
